完成各项功能并封装代码

--- a/style.css
+++ b/style.css
@@ -4,6 +4,15 @@
     box-sizing: border-box;
 }
 
-#canvas{
+#canvas {
     display: block;
+}
+
+.draw {
+    border: 1px solid red;
+    width: 200px;
+    height: 50px;
+}
+.selections{
+    height: 60px;
 }
