--- a/style.css
+++ b/style.css
@@ -4,15 +4,89 @@
     box-sizing: border-box;
 }
 
+.icon {
+    width: 32px;
+    height: 32px;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+    margin:0 24px;
+}
+
 #canvas {
     display: block;
 }
 
 .draw {
-    border: 1px solid red;
     width: 200px;
     height: 50px;
 }
-.selections{
+
+.selections {
+    display: flex;
     height: 60px;
+}
+
+.selections .actions {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 6px 6px;
+}
+
+.selections .lineWidth {
+    line-height: 60px;
+    padding: 0 12px;
+}
+
+.selections .lineWidth .thinLine {
+    display: inline-block;
+    width: 40px;
+    height: 5px;
+    background: black;
+}
+
+.selections .lineWidth .strongLine {
+    display: inline-block;
+    width: 40px;
+    height: 12px;
+    background: black;
+}
+
+.selections .lineColor {
+
+}
+
+.selections .kind {
+    margin: 0 16px;
+}
+
+.selections .lineColor {
+    display: flex;
+    align-items: center;
+    padding: 0 12px;
+}
+
+.selections .lineColor .circle {
+    display: inline-block;
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    margin: 0 8px;
+}
+
+.red{
+    background: red;
+}
+.black{
+    background: black;
+}
+.yellow{
+    background: yellow;
+}
+.blue{
+    background: blue;
+}
+.selected{
+    box-shadow: 0px 0px 10px 10px rgba(221,221,221,0.75);
 }
